packages/tmnl/src/lib/harness/pragma/pragma-automata/tests/snapshots/annotation_snapshot__annotation_mixed_intent.snap
---
source: src/lib/harness/pragma/pragma-automata/tests/annotation_snapshot.rs
expression: resp
---
{
  "intent": {
    "type": "LAYOUT",
    "confidence": 1.0,
    "model_used": "minilm",
    "tier_escalated": false
  },
  "candidates": [],
  "disambiguation": [],
  "hints": {
    "temperature": 0.3,
    "note": "Layout intent, conf=1.00"
  },
  "prefix_block": "```generation-context\n{\n  \"components\": [],\n  \"confidence\": 1.0,\n  \"hints\": {\n    \"model_tier\": \"Minilm\",\n    \"note\": \"Layout intent, conf=1.00\",\n    \"temperature\": 0.30000001192092896\n  },\n  \"intent\": \"Layout\"\n}\n```",
  "sideband": {
    "models_used": [
      "minilm"
    ],
    "latency_ms": "[latency]",
    "catalog_recomputed": false
  }
}
